# octopus

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  index.html  octopus.env.example  streams.example.toml
.github/workflows/: deploy.yml
backend/: README.md
backend/src/: auth.rs  config.rs  http_server.rs  main.rs  oeggs.rs  ogg_player.rs  opus_player.rs  socket_manager.rs  ws_server.rs
deploy/: octopus.service
src/: main.rs  ogg.rs  ogg_parser.rs  ogg_player.rs  socket_manager.rs
web/: .env.example  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
web/src/: app.ts  index.css
web/src/components/: player-progress.ts  stream-picker.ts  stream-player.ts
web/src/components/admin/: admin-dashboard.ts  admin-login.ts
web/src/controllers/: playback-controller.ts
web/src/lib/: admin-api.ts  env.ts  player.ts  router.ts  ws-manager.ts
web/src/utils/: math.ts  svg.ts  time.ts
webplayer/: package.json  pnpm-lock.yaml  tailwind.config.js
webplayer/src/components/: player.svelte  progress.svelte
webplayer/src/icons/: play.svelte
webplayer/src/lib/: image.ts  math.ts  time.ts
webplayer/src/routes/: +layout.svelte  +page.svelte
