[package]
name = "octopus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
ogg = "0.9.2"
opus = "0.3.0"

[[bin]]
name = "octopus-backend"
path = "backend/src/main.rs"
