[package]
name = "octopus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
futures-util = "0.3"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.27.0"
ogg = "0.9.2"
opus = "0.3.0"

[[bin]]
name = "octopus-backend"
path = "backend/src/main.rs"
